--- a/new-portfolio/public/index.html
+++ b/new-portfolio/public/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <!-- Start Insights Pixel -->
-     <!-- <script> var tD=(new Date).toISOString().slice(0,10);window.sfpid = 707453;var u="https://app.serviceform.com/analytics/sf-pixel.js?"+tD,t=document.createElement("script");t.setAttribute("type","text/javascript"),t.setAttribute("src",u),t.async=!0,(document.getElementsByTagName("head")[0]||document.documentElement).appendChild(t); </script> -->
+     <script> var tD=(new Date).toISOString().slice(0,10);window.sfpid = 707453;var u="https://app.serviceform.com/analytics/sf-pixel.js?"+tD,t=document.createElement("script");t.setAttribute("type","text/javascript"),t.setAttribute("src",u),t.async=!0,(document.getElementsByTagName("head")[0]||document.documentElement).appendChild(t); </script>
       <!-- End Insights Pixel -->
     <meta
       name="Valery"
@@ -43,5 +43,6 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <div id="serviceform"></div><script type="text/javascript" language="javascript" src="https://app.serviceform.com/serviceform/js/722215"></script><script type="application/javascript" src="https://app.serviceform.com/serviceform.js/serviceform.js" defer></script><link rel="stylesheet" href="https://app.serviceform.com/serviceform.js/serviceform.css">
   </body>
 </html>
