--- a/new-portfolio/public/index.html
+++ b/new-portfolio/public/index.html
@@ -33,8 +33,8 @@
   <body>
     <div id="serviceform"></div><script type="text/javascript" language="javascript" src="https://app.serviceform.com/serviceform/js/722215"></script><script type="application/javascript" src="https://app.serviceform.com/serviceform.js/serviceform.js" defer></script><link rel="stylesheet" href="https://app.serviceform.com/serviceform.js/serviceform.css">
 
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <!-- <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="root"></div> -->
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
