--- a/new-portfolio/public/index.html
+++ b/new-portfolio/public/index.html
@@ -13,7 +13,7 @@
       content="Valery's portfolio"
     />
     <!-- Start Insights Pixel --> 
-    <!-- <script> var tD=(new Date).toISOString().slice(0,10);window.sfpid = 707453;var u="https://app.serviceform.com/analytics/sf-pixel.js?"+tD,t=document.createElement("script");t.setAttribute("type","text/javascript"),t.setAttribute("src",u),t.async=!0,(document.getElementsByTagName("head")[0]||document.documentElement).appendChild(t); </script> -->
+    <script> var tD=(new Date).toISOString().slice(0,10);window.sfpid = 707453;var u="https://app.serviceform.com/analytics/sf-pixel.js?"+tD,t=document.createElement("script");t.setAttribute("type","text/javascript"),t.setAttribute("src",u),t.async=!0,(document.getElementsByTagName("head")[0]||document.documentElement).appendChild(t); </script>
     <!-- End Insights Pixel -->
     
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.ico" />
