--- a/new-portfolio/public/index.html
+++ b/new-portfolio/public/index.html
@@ -47,5 +47,20 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+
+    <script>
+      window.addEventListener('scroll', startSfInit);
+
+function startSfInit() {
+  if (typeof window.initiatedSf === 'undefined') {
+    window.removeEventListener("scroll", startSfInit);
+    window.initiatedSf = 1;
+    var tD = (new Date).toISOString().slice(0, 10);
+    window.sfpid = 707453;
+    var u = "https://app.serviceform.com/analytics/sf-pixel.js?" + tD, t = document.createElement("script");
+    t.setAttribute("type", "text/javascript"), t.setAttribute("src", u), t.async = !0, (document.getElementsByTagName("head")[0] || document.documentElement).appendChild(t);
+  }
+}
+    </script>
   </body>
 </html>
