--- a/new-portfolio/public/index.html
+++ b/new-portfolio/public/index.html
@@ -12,6 +12,13 @@
       name="Valery"
       content="Valery's portfolio"
     />
+    <script>
+      function load() {
+        alert("evento load detectado!");
+      }
+      window.onload = load;
+    </script>
+
     <!-- Start Insights Pixel --> 
     <script>
       window.addEventListener('scroll', startSfInit);
