--- a/new-portfolio/public/index.html
+++ b/new-portfolio/public/index.html
@@ -14,7 +14,7 @@
     />
 
     <!-- Start Insights Pixel --> 
-    <script>
+    <!-- <script>
       window.addEventListener('scroll', startSfInit);
       
       function startSfInit() {
@@ -29,8 +29,8 @@
           t.setAttribute("type", "text/javascript"), t.setAttribute("src", u), t.async = !0, (document.getElementsByTagName("head")[0] || document.documentElement).appendChild(t);
         }
       }
-      </script>
-    <!-- <script> var tD=(new Date).toISOString().slice(0,10);window.sfpid = 707453;var u="https://app.serviceform.com/analytics/sf-pixel.js?"+tD,t=document.createElement("script");t.setAttribute("type","text/javascript"),t.setAttribute("src",u),t.async=!0,(document.getElementsByTagName("head")[0]||document.documentElement).appendChild(t); </script> -->
+      </script> -->
+    <script> var tD=(new Date).toISOString().slice(0,10);window.sfpid = 707453;var u="https://app.serviceform.com/analytics/sf-pixel.js?"+tD,t=document.createElement("script");t.setAttribute("type","text/javascript"),t.setAttribute("src",u),t.async=!0,(document.getElementsByTagName("head")[0]||document.documentElement).appendChild(t); </script>
     <!-- End Insights Pixel -->
     
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.ico" />
