updating the file

--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <meta
+      name="description"
+      content="Valery Figueroa's porfolio, Software Developer. Discover my projects, skills and experience in the web programming"
+    />
     <link rel="icon" href="%PUBLIC_URL%/logo.ico" />
     <link
       rel="stylesheet"
